# Paraphernalia

./: .gitignore  README.md
CameraApp/: README.md  manifest.json  package-lock.json  package.json
MazeVR/: jsconfig.json  package.json
arm-static-server/: Cargo.toml  README.md
astronomy/: Makefile  parse_bsc5.cc
astropy-test/: astronomy.md  notes.md  title.txt
backtrk/: .gitignore  README.md  d3.c  nbishop.c  nonogram.c  nqueens.c  nrook.c  pento.c  tri_solitaire.c  trimino.c
bktrack/: .gitignore  README.md  queen.c
canvasFps/: README.md  index.html  script.js
canvasFramework/: README.md  framework.js  index.html  test.js
clib-to-go/: .gitignore  Makefile  README.md  go.mod  main.go
cuckoo-test/: .gitignore  Makefile  README.md  cuckoo.c  cuckoo.h  main.c
datafusion-exp/: Cargo.toml  README.md  build.rs
datafusion-exp/examples/: arrow_list_arrays.rs  flight_client.rs  flight_server.rs  flight_streams.rs  poor_mans_lambda.rs  repartitioning.rs  stream_collection.rs  stream_exp.rs
datafusion-exp/proto/: service.proto
datafusion-exp/src/: flight.rs  lib.rs  mark.rs  service.rs
datafusion-memtable/: Cargo.toml  README.md
df-p2p/: CLAUDE.md  Cargo.toml  README.md
df-p2p/examples/: peer_node.rs  query_client.rs
df-p2p/iroh-arrow/: Cargo.toml
df-p2p/iroh-arrow/src/: codec.rs  lib.rs  protocol.rs  stream.rs
df-p2p/src/: context.rs  lib.rs  optimizer_rule.rs  stage.rs  worker.rs
df-p2p/src/operators/: distributed_coalesce.rs  mod.rs
df-p2p/src/queue/: consumer.rs  error.rs  gossip.rs  handler.rs  mod.rs  producer.rs  protocol.rs  store.rs
df-p2p/testdata/: sample.csv
drunken-bishop/: README.md  main.js
embeddedTomcat/: README.md  build.gradle  settings.gradle
embedded_lua/: main.cc  test.lua
embedded_lua_settings/: Makefile  README.md  main.cc  settings.lua
fortranTest/: .gitignore  README.md  factorial.f90  hello.f90
function-compose/: README.md  index.js
getopt-test/: README.md  main.c
go-static-server/: .gitignore  Makefile  README.md  go.mod  main.go
golib-to-c/: .gitignore  Makefile  README.md  main.c
gopher/: README.md  gopher2redis.rb  redis.conf
graphs/: README.md  graph.cc
http-cgi/: Dockerfile  README.md
iceberg-hidden-partition/: Cargo.toml  README.md
iroh-exp/: Cargo.toml  README.md  RESEARCH.md
iroh-exp/src/: main.rs  progress.rs  receive.rs  send.rs
iroh-queue/: Cargo.toml
iroh-queue/examples/: consumer.rs  producer.rs
iroh-queue/src/: consumer.rs  error.rs  gossip.rs  handler.rs  lib.rs  producer.rs  protocol.rs  queue.rs
isocity-builder/: CLAUDE.md  PLAN.md  README.md  index.html
isotents/: README.md  index.html
js-constrict/: README.md  constrict
jwt/: README.md  jwt.rb
k8s-local-volume/: Makefile  README.md  postgres.yml
kexp/: .gitignore  README.md  box.k  combine.k  h.k  patterns.k  piwindow1.k  rec.k  rec.md  repl-ta.k  repl.k  rhys_grid.k  sql.k  t.k  wz.k
kube-kong/: README.md  ingress.yml  main.tf
kural/: kural.json  t.k
latex-presentation/: Makefile  pdf.sh  presentations-as-code.md
lerna-react/: README.md  package.json
lua-package-loader/: README.md  cube.lua  loader.lua  logical.lua  main.lua
mode7/: README.md  index.html
ncurses/: .gitignore  Makefile  README.md  exp-1.c  hello.c  window.c
node-module-extensions/: README.md  cube.js  fn.js
notebooks/: struct packing and unpacking.ipynb
onion/: Cargo.toml  README.md
pandoc-book/: Makefile  README.md  mdpdf.md  page-c.md  title.txt
perf-image/: Dockerfile  README.md  seccomp-perf.json
perlin-terrain/: README.md  jsconfig.json  package.json
pg_page/: Makefile  README.md
pi-billion/: Cargo.toml  README.md
plantuml-util/: Dockerfile  README.md
procedural-gen/: README.md  monochrome.js  package.json  tiledmapgen.js
procedural-road-gen/: index.js  package.json
react-camera-qr/: README.md  package.json
react-canvas/: README.md  package.json
react-three-fps/: README.md  package.json
react-three-maze/: README.md
react-three-scenery/: package.json
react-three-waterfall/: README.md  index.js  package.json
recutil-tools/: Cargo.toml  README.md
recutil-tools/rec2parquet/: Cargo.toml
recutil-tools/rec2parquet/src/: main.rs
recutil-tools/recsql/: Cargo.toml
recutil-tools/recsql/src/: lib.rs  main.rs  pushdown.rs
recutil-tools/recutils-rs/: Cargo.toml  README.md  build.rs  wrapper.h
recutil-tools/recutils-rs/examples/: append_record.rs  count_records.rs  modify_records.rs  query_records.rs
recutil-tools/recutils-rs/src/: arrow.rs  db.rs  lib.rs  record.rs  rset.rs  selection_expression.rs  sex.rs
s-parser/: .gitignore  Makefile  README.md  example.sc  main.c  sexpr.c  sexpr.h
shaders/: README.md  editor-mode-glsl.js  editor.js  index.css  index.html  index.js  package.json
spring-hazelcast/: Dockerfile  Makefile  README.md  build.gradle  settings.gradle
spring-proxy-multipart/: README.md
spring-tracing-jaeger/: README.md  build.gradle  docker-compose.yml  settings.gradle
the-lamp/: README.md
the-void/: .gitignore  Makefile  README.md  main.c  schema.sql
theming/: README.md  package.json
three-template/: .gitignore  README.md  constants.js  ecosystem.js  index.html  main.js  primitives.js  scene.js
tla-exp/: .gitignore
tpcds-delta/: Cargo.toml  README.md
tpcds-delta/src/: main.rs
vanilla-pwa/: README.md  index.html  manifest.json  sw.js
visual-regression/: .gitignore  README.md  package.json
web-socket-test/: .proxyrc  README.md  index.html  package.json
webglTrapeziod/: App.js  README.md  index.html  main.js  package.json
yaml-autocomplete/: README.md  bash-completions.bash  scratch.yml
(+221 files in other folders)
