[package]
name = "datafusion-partition-exp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrow = "57.0.0"
arrow-flight = "57.1.0"
async-trait = "0.1.89"
bytes = "1.11.0"
dashmap = "6.1.0"
datafusion = "51.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
pin-project = "1.1.10"
prost = "0.14.1"
tokio = {version = "1.48.0", features=["rt-multi-thread"]}
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = { version = "0.14.2" }
