[workspace]
members = ["iroh-arrow"]

[workspace.dependencies]
iroh = "0.96"
arrow = "57.0.0"
arrow-ipc = "57.0.0"
anyhow = "1"

[package]
name = "df-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local
iroh-arrow = { path = "iroh-arrow" }

# Networking
iroh = { workspace = true }
iroh-gossip = "0.96"

# DataFusion
datafusion = { version = "52.2.0", default-features = false, features = [
    "parquet",
    "sql",
    "unicode_expressions",
    "datetime_expressions",
] }
datafusion-proto = "52.2.0"
datafusion-datasource = "52.2.0"

# Arrow
arrow = { workspace = true }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Utils
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
bytes = "1.11.1"

[dev-dependencies]
insta = "1"
