[package]
name = "iroh-exp"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.96"
iroh-blobs = "0.98"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
data-encoding = "2"
rand = "0.9"
n0-future = "0.3"
futures-lite = "2"
