[package]
name = "iroh-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.96"
iroh-gossip = "0.96"
iroh-base = "0.96"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
n0-future = "0.3"
futures-lite = "2"
bytes = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio = { version = "1", features = ["full", "test-util"] }
