[package]
name = "rec2parquet"
version = "0.1.0"
edition = "2024"
description = "Convert GNU recutils .rec files to Apache Parquet"
license = "GPL-3.0-or-later"

[[bin]]
name = "rec2parquet"
path = "src/main.rs"

[dependencies]
recutils-rs = { path = "../recutils-rs", version = "0.1", features = ["arrow"] }
arrow = "58"
parquet = "58"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
