[package]
name = "recutils-rs"
version = "0.1.0"
edition = "2024"
description = "Rust FFI bindings to GNU recutils (librec)"
license = "GPL-3.0-or-later"
links = "rec"

[features]
default = []
# Enables the `recutils_rs::arrow` module — rec → Apache Arrow conversion.
arrow = ["dep:arrow", "dep:log"]

[dependencies]
arrow = { version = "58", optional = true }
log = { version = "0.4", optional = true }

[build-dependencies]
bindgen = "0.71"

[lib]
name = "recutils_rs"
crate-type = ["rlib"]
